--- a/cadastro.html
+++ b/cadastro.html
@@ -27,7 +27,7 @@
         </div>
    </form>
    <article>
-    <a href="" id="login">Login</a>
+    <a href="logado.html" id="login">Login</a>
    </article>
    
 </body>
